--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,22 +1,21 @@
 {
-    "name": "backend",
+    "name": "infoHub",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "A MERN stack application",
+    "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "nodemon server.js"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
     "dependencies": {
+        "express": "^4.17.1",
+        "mongoose": "^5.12.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2"
+        "dotenv": "^10.0.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.4"
-    }
+        "nodemon": "^2.0.7"
+    },
+    "author": "Aniket Gaur",
+    "license": "ISC"
 }
